# Ferrispot

./: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: authorization_code_flow.rs  authorization_code_flow_reuse_refresh_token.rs  authorization_code_with_pkce_flow.rs  authorize_code_flow.rs  client_credentials_flow.rs  get_track.rs  implicit_grant_flow.rs  play.rs  playback_state.rs  search.rs  token_reuse.rs  tracks.rs  users.rs
src/: authorization_code.rs  client.rs  error.rs  implicit_grant.rs  lib.rs  model.rs  scope.rs  util.rs
src/client/: authorization_code.rs  implicit_grant.rs  object.rs  private.rs  request_builder.rs  scoped.rs  unscoped.rs
src/client/request_builder/: catalog_item_builder.rs  player_control_builder.rs  search_builder.rs
src/client/scoped/: player_control_builder.rs
src/client/unscoped/: search_builder.rs
src/model/: album.rs  artist.rs  country_code.rs  error.rs  id.rs  object_type.rs  page.rs  playback.rs  search.rs  track.rs  user.rs
src/util/: duration_millis.rs  maybe_split_once.rs
