[package]
authors = ["Spanfile <me@spans.fi>"]
description = "A wrapper for the Spotify Web API"
edition = "2021"
keywords = ["spotify"]
license = "MIT OR Apache-2.0"
name = "ferrispot"
repository = "https://github.com/Spanfile/Ferrispot"
version = "0.1.0"

[dependencies]
# async-stream = "0.3.3"
async-trait = "0.1.58"
base64 = "0.13.1"
const_format = "0.2.30"
# futures = "0.3.21"
log = "0.4.17"
rand = "0.8.5"
reqwest = {version = "0.11.12", features = ["json"]}
serde = {version = "1.0.147", features = ["derive"]}
sha2 = "0.10.6"
thiserror = "1.0.37"

async-std = {version = "1.12.0", optional = true}
tokio = {version = "1.22.0", features = ["time"], optional = true}

[dev-dependencies]
dotenvy = "0.15.6"
env_logger = "0.9.3"
serde_json = "1.0.87"
tokio = {version = "1.22.0", features = ["rt-multi-thread", "macros"]}

[features]
default = ["tokio_sleep"]
# default = ["async_std_sleep"]

async_std_sleep = ["dep:async-std"]
blocking = ["reqwest/blocking"]
tokio_sleep = ["dep:tokio"]
