[package]
authors = ["Spanfile <me@spans.fi>"]
description = "A wrapper for the Spotify Web API"
edition = "2021"
keywords = ["spotify"]
license = "MIT OR Apache-2.0"
name = "ferrispot"
repository = "https://github.com/Spanfile/Ferrispot"
version = "0.1.0"

[dependencies]
# async-stream = "0.3.3"
# futures = "0.3.21"
serde = {version = "1.0.147", features = ["derive"]}
thiserror = "1.0.37"

# async/sync client dependencies
async-trait = {version = "0.1.58", optional = true}
base64 = {version = "0.13.1", optional = true}
const_format = {version = "0.2.30", optional = true}
log = {version = "0.4.17", optional = true}
rand = {version = "0.8.5", optional = true}
reqwest = {version = "0.11.12", features = ["json"], optional = true}
sha2 = {version = "0.10.6", optional = true}

# rate limit sleep dependencies
async-std = {version = "1.12.0", optional = true}
tokio = {version = "1.22.0", features = ["time"], optional = true}

[dev-dependencies]
dotenvy = "0.15.6"
env_logger = "0.10.0"
serde_json = "1.0.87"
tokio = {version = "1.22.0", features = ["rt-multi-thread", "macros"]}

[features]
default = ["async", "sync", "tokio_sleep"]
# default = ["async_std_sleep"]

async = ["dep:reqwest", "dep:sha2", "dep:log", "dep:rand", "dep:base64", "dep:const_format", "dep:async-trait"]
sync = ["dep:reqwest", "dep:sha2", "dep:log", "dep:rand", "dep:base64", "dep:const_format", "reqwest?/blocking"]

async_std_sleep = ["dep:async-std"]
tokio_sleep = ["dep:tokio"]
